# relaxed_ik

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py  start_here.py
RelaxedIK/: relaxedIK.py
launch/: collision_viewer.launch  configuration.launch  generate_info_file.launch  joint_state_pub.launch  joint_state_pub_nojsp.launch  load_info_file.launch  preprocessing.launch  preprocessing_rust.launch  relaxed_ik.launch  relaxed_ik_julia.launch  relaxed_ik_python.launch  relaxed_ik_rust.launch  relaxed_ik_server.launch  robot_state_pub.launch  rviz_viewer.launch  rviz_viewer_no_pub.launch  sample.launch  urdf_viewer.launch  urdf_viewer_with_collision_info.launch
msg/: EEPoseGoals.msg  JointAngles.msg
rviz/: collision_viewer.rviz  joint_viewer.rviz
src/: autocam_node.jl  broadcaster.py  calibrate_nns.jl  coll_test.py  collision_viewer.py  configuration.py  display_learned_collision_score.jl  flux_test.jl  generate_info_file.py  generate_input_and_output_pairs.py  ik_trials.jl  julia_send.jl  julia_test.py  julia_test2.py  keras_test.py  keras_test2.py  keyboard_camera_buttons.py  keyboard_ikgoal_driver.py  knet_test.jl  load_info_file.py  marker_ikgoal_driver.py  movo_test.py  mt_test.py  multithreading.py  preprocessing.jl  preprocessing.py  preprocessing2.jl  preprocessing3.jl  preprocessing_rust.py  quaternion_test.py  quit.py  relaxedIK_processing.py  relaxedIK_solution_transfer.jl  relaxedIK_wrapper.jl  relaxed_ik_node.jl  relaxed_ik_node.py  relaxed_ik_rust.py  relaxed_ik_server.jl  reset_and_quit.py  robot_os.jl  (+32 more)
src/RelaxedIK_Rust/: Cargo.toml
srv/: IKSolution.srv  RelaxedIKSolution.srv  SelfCollisionQuery.srv
(+357 files in other folders)
