[package]
name = "RelaxedIK_Rust"
version = "0.1.0"
authors = ["djrakita <djrakita@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.19"
yaml-rust = "0.4"
optimization_engine = "0.6.0"
ndarray = "0.13.0"
num = "0.2.0"
nlopt = "0.5.1"
time = "0.1"
kdtree = "0.6.0"
vpsearch = "1.3.5"
ndarray-rand = "0.11.0"
rosrust = "0.9.0"
rand = "0.7.2"
ncollide2d = "0.19"
ncollide3d = "0.21.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

